# algorithmic-trading

./: .env.example  .gitignore  GUIDE.md  README.md  pyproject.toml  requirements.txt  test_framework.py
Notes/: Planning
examples/: backtest_example.py  custom_strategy.py  get_account_info.py  live_trading_example.py
trading_framework/: __init__.py  base_strategy.py  config.py
trading_framework/backtesting/: __init__.py  backtester.py
trading_framework/live_trading/: __init__.py  trader.py
trading_framework/strategies/: __init__.py  ma_crossover.py  macd_crossover.py  rsi_strategy.py
trading_framework/utils/: __init__.py
